fix api user
